# esp-bist

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  LICENSE  README.md  idf_component.yml  pytest.ini
.gitlab/docker/build-env/: Dockerfile
cmake/: project.cmake  toolchain-esp32c3.cmake
components/esp_common/include/: esp_assert.h
components/esp_hw_support/: esp_clk.c  periph_ctrl.c  regi2c_ctrl.c
components/esp_hw_support/port/esp32c3/: sar_periph_ctrl.c
components/esp_system/port/: esp_system_chip.c
components/hal/esp32c3/include/hal/: xt_wdt_ll.h
components/newlib/: assert.c
modules/esp-idf/components/bt/host/nimble/nimble/nimble/host/include/host/: ble_gap.h
modules/esp-idf/components/bt/host/nimble/nimble/nimble/host/src/: ble_gap.c  ble_hs.c  ble_hs_hci.c  ble_hs_hci_cmd.c  ble_hs_hci_evt.c  ble_hs_pvcy.c
modules/esp-idf/components/bt/host/nimble/nimble/nimble/include/nimble/: hci_common.h
modules/esp-idf/components/bt/host/nimble/nimble/porting/nimble/src/: nimble_port.c
modules/esp-idf/components/mbedtls/mbedtls/: CMakeLists.txt  sbom.yml
modules/esp-idf/components/openthread/openthread/tests/toranj/cli/: test-500-two-brs-two-networks.py
modules/esp-idf/tools/unit-test-app/configs/: release_s3
samples/input/: CMakeLists.txt  main.c
scripts/: calculate_crc32.py  cleanup_components.py  flasher_args.json  test_utils.py
src/bist/: CMakeLists.txt  README.md
src/bist/core/clock/: bist_clock_fail.c
src/bist/core/clock/include/: bist_clock_fail.h
src/bist/core/cpu/: bist_cpu_csr_regs.c  bist_cpu_regs.c  bist_cpu_stack.c  bist_pc.c
src/bist/core/cpu/include/: bist_cpu_csr_regs.h  bist_cpu_regs.h  bist_cpu_stack.h  bist_pc.h
src/bist/core/include/: bist_core.h
src/bist/core/memory/: bist_flash.c  bist_ram.c
src/bist/core/memory/include/: bist_flash.h  bist_ram.h
src/bist/core/wdt/: bist_wdt.c
src/bist/core/wdt/include/: bist_wdt.h
src/bist/drivers/: gpio.c  wdt.c  xt_wdt.c
src/bist/drivers/include/: bist_gpio.h  bist_log.h  wdt.h
src/bist/include/: bist_esp.h  bist_esp_types.h
src/soc/esp32c3/: start.c  vectors.S
src/soc/esp32c3/include/: sdkconfig.h
src/soc/esp32c3/ld/: linker.ld  soc_memory.h
tests/clock_test/: CMakeLists.txt  main.c
tests/cpu_reg_test/: CMakeLists.txt  main.c  pytest_device_cpu_reg_test.py  pytest_qemu_cpu_reg_test.py
tests/cpu_stack_test/: CMakeLists.txt  main.c  pytest_device_cpu_stack_test.py  pytest_qemu_cpu_stack_test.py
tests/flash_test/: CMakeLists.txt  main.c  pytest_device_flash_test.py  pytest_qemu_flash_test.py
tests/pc_test/: CMakeLists.txt  gdb_script_temp.gdb  main.c  pytest_device_pc_test.py  pytest_qemu_pc_test.py
tests/ram_test/: CMakeLists.txt  main.c  pytest_device_ram_test.py  pytest_qemu_ram_test.py
tests/wdt_test/: CMakeLists.txt  main.c  pytest_device_wdt_test.py  pytest_qemu_wdt_test.py
tools/riscv32-esp-elf-gdb/: package.json
tools/riscv32-esp-elf-gdb/share/info/: annotate.info  bfd.info  gdb.info  gprof.info  sframe-spec.info  stabs.info
tools/riscv32-esp-elf-gdb/share/man/man1/: riscv32-esp-elf-gdb-add-index.1  riscv32-esp-elf-gdb.1  riscv32-esp-elf-gdbserver.1  riscv32-esp-elf-gprof.1
tools/riscv32-esp-elf-gdb/share/man/man5/: riscv32-esp-elf-gdbinit.5
tools/riscv32-esp-elf/lib/: libcc1.so.0.0.0
tools/riscv32-esp-elf/lib/gcc/riscv32-esp-elf/13.2.0/plugin/: gtype.state  libcc1plugin.so.0.0.0  libcp1plugin.so.0.0.0
tools/riscv32-esp-elf/lib/gcc/riscv32-esp-elf/13.2.0/plugin/include/: auto-host.h  configargs.h  tm-preds.h  tm.h
tools/riscv32-esp-elf/lib/gcc/riscv32-esp-elf/13.2.0/plugin/include/config/riscv/: elf.h  riscv.h
tools/riscv32-esp-elf/libexec/gcc/riscv32-esp-elf/13.2.0/: collect2  g++-mapper-server  lto-wrapper
tools/riscv32-esp-elf/libexec/gcc/riscv32-esp-elf/13.2.0/install-tools/: fixincl
tools/riscv32-esp-elf/libexec/gcc/riscv32-esp-elf/13.2.0/plugin/: gengtype
tools/riscv32-esp-elf/riscv32-esp-elf/include/c++/13.2.0/riscv32-esp-elf/no-rtti/bits/: c++config.h
(+6 files in other folders)
